# gridlock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bumpVersion.py  conanfile.txt  derivation.ipynb  requirements.txt  temp.py
input/: channel.json  config.toml  lid.json  solver.json  solver.toml
input/boundaryConditions/: channel.json  channel.toml  lid.json  lid.toml
input/mesh/: channel.json  channel.toml  lid.json  lid.toml
input/solver/: channel.toml  lid.toml
src/: CMakeLists.txt  boundaryConditions.hpp  gridlock.cpp  meshLooper.hpp  postProcessor.hpp  ui.hpp
src/boundaryConditions/: CMakeLists.txt  boundaryConditions.cpp  boundaryConditions.hpp
src/fieldArray/: CMakeLists.txt  fieldArray.cpp  fieldArray.hpp  fieldArrayManager.cpp  fieldArraymanager.hpp
src/governingEquations/: CMakeLists.txt  governingEquationsBase.cpp  governingEquationsBase.hpp
src/governingEquations/pressureProjection/: CMakeLists.txt  momentumU.cpp  momentumU.hpp  uMomentum.cpp  uMomentum.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/numToStringConverter/: CMakeLists.txt  numToStringConverter.cpp  numToStringConverter.hpp
src/infrastructure/parameterFile/: CMakeLists.txt  parameterFile.cpp  parameterFile.hpp
src/infrastructure/parameters/: CMakeLists.txt  parameters.cpp  parameters.hpp
src/infrastructure/stopWatch/: CMakeLists.txt  stopWatch.cpp  stopWatch.hpp
src/infrastructure/ui/: CMakeLists.txt  ui.cpp  ui.hpp
src/infrastructure/utilities/: data.hpp
src/linearSolver/: linearSolverBase.hpp  linearSolverEigen.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/meshLooper/: meshLooper.hpp
src/postProcessing/: CMakeLists.txt  postProcessing.cpp  postProcessing.hpp
src/residuals/: CMakeLists.txt  residuals.cpp  residuals.hpp
src/timeInfo/: CMakeLists.txt  timeInfo.cpp  timeInfo.hpp
src/timeStep/: CMakeLists.txt  timeStep.cpp  timeStep.hpp
src/utilities/: data.hpp
